@@ -1,5 +1,7 @@
 Version 1.0-6 (2013-01-14)
-o Added label.ellipse() as an exported function
+o Added label.ellipse() as an exported function.
+o heplot() gets a label.pos= argument allowing
+  the label position to be specified (bottom, left, top, right or center)
 
 Version 1.0-4 (2012-12-29)
 o Added interpPlot for plotting interpolations between two data sets, with data ellipses, etc.
